changelog for pam_pwdfile PAM module - Charl P. Botha <cpbotha@ieee.org>
$Id: changelog,v 1.18 2003-07-07 15:09:35 cpbotha Exp $
---------------------------------------------------------------------------

0.99 :

* added micro howto by Warwick Duncan (in contrib/ dir) explaining how to
  setup Cyrus IMAPD + pam_pwdfile so that one does not have to create system
  accounts for imapd users
* added Makefile.standalone by Gerald Richter to the contrib files.

0.98 : Mon Jun 10 23:49:46 CEST 2002

* added contrib directory with spec file and Makefile by Jason F. McBrayer
  <jason@xeran.com>.
* -lcrypt is now used again (because it is necessary in some cases, doh);
  Problem reported by Charles Vejnar <chv@fr.st>
* That damn Mozilla beat us to 1.0!

0.97 : Sat May 11 16:40:19 CEST 2002

* added md5.h, md5.c, md5_crypt.c and bigcrypt.c from the pam_unix.c module.
  This fixes the bug where crypt() would not be able to do md5 crypting if
  an SSL library was linked into the calling application.  Several users
  reported this, but the report (and possible patch, which I chose not to use,
  opting instead to emulate pam_unix) of Yu Guanghui <ygh@dlut.edu.cn> was 
  most useful.
* Small tweaks to documentation.

0.95 : Sat Jul 14 22:38:16 CEST 2001

* added features.h, _BSD_SOURCE now defined by Makefile (for vsyslog a.o.)
* integrated patch by Ethan Benson <erbenson@alaska.net> that enables a two
  second PAM delay when an incorrect password is supplied.
* yes, if this version floats for long enough, we can do the 1.0 thing.

0.9: Fri Jun 15 23:23:31 CEST 2001

* integrated patch by Stephen Darragh <srd@it.net.au> to fix problems with
  short MD5 crypts and trailing newlines.  In fact, his patch just makes
  things a tad more correct, short MD5 crypts or not.

0.8: Sat May 12 11:57:18 CEST 2001

* the MrKen (aka MJ Turner) release.  Removed unnecessary include that was
  breaking the debian builds.

0.7: Tue Apr 17 23:13:34 CEST 2001
